--- a/html1.0.2/css/style.css
+++ b/html1.0.2/css/style.css
@@ -7,7 +7,7 @@
 
 body{
 
-    background-color:#2e2e2e;
+    background-color:#ffff;
 
 }
 
@@ -45,9 +45,10 @@ body{
 
 .logo{
 
-    min-width: 880px;
-    height: 200px;
+    min-width: 150px;
+    height: 45px;
     padding: 10px;
+    
     
 }
 
@@ -60,27 +61,28 @@ body{
 .cont-div{
     min-width: 620px;
     max-width: 620px;
-    padding: 10px;
-    background-color: #252526;
+    padding:10px;
+    background-color:whitesmoke;
     float: left;
-    color:whitesmoke;
+    color:rgb(71, 70, 70);
     border-radius: 20px;
+   
 }
 .cont{
      min-width: 900px;
      padding: 20px;
      margin: auto;
      max-width: 900px;
-     padding-bottom: 20px;
+     
 }
 .cont-div-right{
    min-width: 220px;
     max-width: 220px;
     padding: 10px;
-    background-color: #252526;
+    background-color: whitesmoke;
     float: right;
     border-radius: 20px;
-    color:whitesmoke;
+    color:rgb(71, 70, 70);
 
 }
 
@@ -102,7 +104,8 @@ body{
     min-width: 900px;
     max-width: 900px;
     margin:auto; 
-    padding-top: 20px;
+    padding-top:100px;
+    padding-bottom:100px;
    
 }
 
@@ -180,6 +183,7 @@ body{
     float:right; 
     text-align: justify;
     font-size: 1.1em;
+    color:rgb(71, 70, 70);
 
 }
 .h3-login{
@@ -203,4 +207,34 @@ body{
 
     width: 120px;
     height: 120px;
+}
+
+#rod{
+    margin-top: 700px;
+}
+.new-user2{
+
+ 
+
+    background-color: #252526;
+    color:whitesmoke;
+    text-align: center;
+    margin-top: auto;
+   
+   
+}
+   .cont-div-3{
+
+  
+    min-width: 900px;
+    max-width: 900px;
+    margin:auto; 
+    padding-top:100px;
+    padding-bottom:100px;
+   
+}
+.form-div2{
+
+    background-color:whitesmoke ;
+    
 }
